--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.apache.poi:poi:5.0.0'
 	implementation 'org.apache.poi:poi-ooxml:5.0.0'
+	implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+	implementation 'mysql:mysql-connector-java:8.0.23'
+	implementation 'org.jfree:jfreechart:1.5.4'
+	implementation 'com.itextpdf:itext7-core:8.0.0'
+	implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
+	implementation 'org.apache.logging.log4j:log4j-core:2.22.0'
 }
 
 tasks.named('test') {
